2001-11-21  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02470]
	* XMakefile: all of scripts are generated by this instead of configure
	* configure: add PERL, remove scripts/dirlist.cgi generation
	* config.h.dist: add PERL
	* scripts/Makefile: added
	* scripts/multipart/Makefile scripts/w3mman/Makefile:
	  new scripts generation and installation
	* scripts/multipart/README scripts/w3mman/README: update

2001-11-21  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02472] cleanup CYGWIN macro
	* display.c (displayBuffer): use __CYGWIN__ macro
	* fm.h: ditto
	* terms.c (refresh): add condition for isWinConsole which
          defined only japanese cygwin environment

2001-11-21  Akinori Ito <aito@fw.ipsj.or.jp>

	* [w3m-dev 02466]
	  Homepage URLs and author's mail addresses in the documents
	  are changed.

2001-11-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02459] 
	* XMakefile: update scripts/dirlist.cgi generation
	* scripts/multipart/multipart.cgi: removed
	* scripts/w3mman/w3mman scripts/w3mman/w3mman2html.cgi: removed
	
	* [w3m-dev 02462]
	* scripts/dirlist.in scripts/dirlist.cgi: removed
	* scripts/dirlist.cgi.in: added

2001-11-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* add rcsids

2001-11-21  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02454]
	* buffer.c (newBuffer): set COLS
	* display.c (displayBuffer redrawLine redrawLineRegion
	    cursorRight arrangeCursor cursorXY): 
	  new showLineNumber implementation
	* main.c (ctrCsrH shiftvisualpos shiftl shiftr _movL _movR
	   _followForm follow_map process_mouse):
	  use buf->COLS, buf->rootX
	* menu.c (popupMenu mainMn initSelectMenu):
	  use buf->rootX
	* etc.c (columnSkip): use buf->COLS
	* file.c (HTMLlineproc2body loadBuffer saveBufferDelNum getNextPage)
	  remove old showLineNumber codes
	* fm.h (Buffer): add rootX, COLS

2001-11-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* XMakefile (clean): rm tagtable.c
	* .cvsignore: XXMakefile config.h config.param
